Corrections#2 have been made to the homework